Start separate convolution section

--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -105,9 +105,9 @@ Let $\rvx(n)$ and $\rvy(n)$ be \fncte{random sequence}s.\\
   \put(-100,  10 ){\makebox (100, 40)[b]{$\rvx(n)$}  }
   \put(-100, -50 ){\makebox (100, 40)[t]{$\Rxx(n,m)$}  }
   \put(-100,   0 ){\vector  (  1,  0){100}             }
-  \put(   0, -50 ){\framebox(100,100){$\conv\fh(n)$}  }
+  \put(   0, -50 ){\framebox(100,100){$\convd\fh(n)$}  }
   \put( 100,   0 ){\vector  (  1,  0){100}             }
-  \put( 110,   0 ){\makebox (100, 40)[lb]{$\ds\rvy(n)=\fh(n)\conv\rvx(n)=\sum_k\fh(k)\rvx(n-k)$}  }
+  \put( 110,   0 ){\makebox (100, 40)[lb]{$\ds\rvy(n)=\fh(n)\convd\rvx(n)=\sum_k\fh(k)\rvx(n-k)$}  }
   \put( 100, -50 ){\makebox (100, 40)[t]{$\Ryy(n,m)$}  }
   \put(  50, -60 ){\makebox (  0,  0)[t]{$\Rxy(n,m)$}  }
   \end{picture}
@@ -133,13 +133,13 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
 \thmbox{
    \brb{\begin{array}{M}
       $\opS$ is
-    \\\prope{linear time invariant}
-    \\(\prope{LTI})
+   %\\\prope{linear time invariant}
+    (\prope{LTI})
   \end{array}}
   \implies
   \brb{\begin{array}{Frc>{\ds}l>{\ds}lD}
-       (1).&\pmeany(n)&=& \sum_{k\in\Z} \fh(k)      \pmeanx(m-k)  &= \fh(n)\conv \pmeanx(n) & and
-     \\(2).&\Rxy(n,m) &=& \sum_{k\in\Z} \fh^\ast(k) \Rxx(n-k,m+k) &                         & and 
+       (1).&\pmeany(n)&=& \sum_{k\in\Z} \fh(k)      \pmeanx(n-k)  &\eqd \fh(n)\convd \pmeanx(n) & and
+     \\(2).&\Rxy(n,m) &=& \sum_{k\in\Z} \fh^\ast(k) \Rxx(n-k,m+k) &                            & and 
      \\(3).&\Ryy(n,m) &=& \sum_{k\in\Z} \fh^\ast(k) \Ryx(n-k,m+k)
   \end{array}} 
   }
@@ -155,7 +155,7 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
      && \text{by \prope{linearity}}
    \\&= \sum_{k\in\Z} \fh(k) \pmeanx(n-k)
      && \text{by definition of $\pmeanx$}
-   \\&\eqd \fh(n)\conv \pmeanx(n) 
+   \\&\eqd \fh(n)\convd \pmeanx(n) 
      && \text{by definition of \ope{convolution}}
      && \text{\xref{def:dsp_conv}}
    \\
@@ -164,10 +164,10 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
      &\eqd \pE\brs{\rvx(n+m) \rvy^\ast(n) }
      && \text{by definition of $\Rxy(n,m)$}
      && \text{\xref{def:Rxynm}}
-   \\&= \pE\brs{\rvx(n+m) \brp{\fh(n)\conv\rvx(n)}^\ast}
+   \\&= \pE\brs{\rvx(n+m) \brp{\fh(n)\convd\rvx(n)}^\ast}
      && \text{by \prope{LTI} hypothesis}
    \\&\eqd \pE\brs{\rvx(n+m) \brp{ \sum_{k\in\Z} h(k) \rvx(n-k) }^\ast }
-     && \text{by definition of \ope{convolution}}
+     && \text{by definition of \ope{convolution} $\conv$}
      && \text{\xref{def:dsp_conv}}
    \\&=    \pE\brs{\rvx(n+m) \sum_{k\in\Z} \fh^\ast(k) \rvx^\ast(n-k)  }
      && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
@@ -185,7 +185,7 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
    %  && \text{where $k'\eqd -k$}
    %\\&\eqd \sum_{k\in\Z} \fh^\ast(-k) \Rxx(n+k,m-k)
    %  && \text{where $k\eqd k'$}
-   %\\&= \Rxx(n+k,m) \conv \fh^\ast(-m)
+   %\\&= \Rxx(n+k,m) \convd \fh^\ast(-m)
    %  && \text{by definition of \ope{convolution}}
    %  && \text{\xref{def:dsp_conv}}
    \\
@@ -194,7 +194,7 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
      &\eqd \pE\brs{\rvy(n+m) \rvy^\ast(n) }
      && \text{by definition of $\Rxy(n,m)$}
      && \text{\xref{def:Rxynm}}
-   \\&= \pE\brs{\rvy(n+m) \brp{\fh(n)\conv\rvx(n)}^\ast}
+   \\&= \pE\brs{\rvy(n+m) \brp{\fh(n)\convd\rvx(n)}^\ast}
      && \text{by \prope{LTI} hypothesis}
    \\&\eqd \pE\brs{\rvy(n+m) \brp{ \sum_{k\in\Z} \fh(k) \rvx(n-k) }^\ast }
      && \text{by definition of \ope{convolution}}
@@ -215,24 +215,24 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
    %  && \text{where $k'\eqd-k$}
    %\\&= \sum_{k\in\Z} \fh^\ast(-k) \Ryx(n+k,m-k)
    %  && \text{where $k\eqd k'$}
-   %\\&\eqd \Ryx(n+k,m) \conv \fh^\ast(-m)
+   %\\&\eqd \Ryx(n+k,m) \convd \fh^\ast(-m)
    %  && \text{by definition of \ope{convolution}}
    %  && \text{\xref{def:dsp_conv}}
    %\\
    %\\
    %\Ryy(n,m)
-   %  &= \Rxy(n,m)\conv \fh(m)
+   %  &= \Rxy(n,m)\convd \fh(m)
    %  && \text{by previous result}
-   %\\&= \brs{\Rxx(n,m) \conv \fh^\ast(-m)}\conv \fh(-m)
+   %\\&= \brs{\Rxx(n,m) \convd \fh^\ast(-m)}\convd \fh(-m)
    %  && \text{by previous result}
-   %\\&= \Rxx(n,m) \conv \fh(-m) \conv \fh^\ast(-m)
+   %\\&= \Rxx(n,m) \convd \fh(-m) \convd \fh^\ast(-m)
    %  && \text{by previous result}
    %\\
    %\\
    %\Ryy(n,m)
-   %  &= \Rxx(n,m)\conv\fh(-m) \conv \fh^\ast(-m)
+   %  &= \Rxx(n,m)\convd\fh(-m) \convd \fh^\ast(-m)
    %  && \text{by previous result}
-   %\\&\eqd \sum_{p\in\Z}\fh^\ast(-p) \brs{\Rxx(n,m-p)\conv\fh(-m)}
+   %\\&\eqd \sum_{p\in\Z}\fh^\ast(-p) \brs{\Rxx(n,m-p)\convd\fh(-m)}
    %  && \text{by definition of \ope{convolution}}
    %  && \text{\xref{def:dsp_conv}}
    %\\&= \sum_{p\in\Z}\fh^\ast(-p) \sum_{k\in\Z}\fh(-k) \Rxx(n,m-p-k)
@@ -293,7 +293,7 @@ $\pmeanx(n)$, $\pvarx(n)$, $\Rxx(n,m)$, and $\Rxy(n,m)$ \xref{def:Rxynm}.
      (1).&The \fnctd{mean}             & \pmeanx  & of $\rvx(n)$               is & \pmeanx &\eqd& \pE\brs{\rvx(0)}
    \\(2).&The \fnctd{variance}         & \pvarx   & of $\rvx(n)$               is & \pvarx  &\eqd& \pE\brp{\brs{\rvx(0)-\pmeanx}^2}
    \\(4).&The \fnctd{cross-correlation} & \Rxy(m)  & of $\rvx(n)$ and $\rvy(n)$ is & \Rxy(m) &\eqd& \pE\brs{\rvx(n+m)\rvy^\ast(0)}
-   \\(3).&The \fnctd{auto-correlation}  & \Rxx(m)  & of $\rvx(n)$               is & \Rxx(m) &\eqd& \brlr{\Rxx(m)}_{\rvy=\rvx}
+   \\(3).&The \fnctd{auto-correlation}  & \Rxx(m)  & of $\rvx(n)$               is & \Rxx(m) &\eqd& \brlr{\Rxy(m)}_{\rvy=\rvx}
   %\\The \fnctd{auto-correlation operator} & \opR\ff    & of $\ff(t)$               is & \opR f    &\eqd& \int_{u\in\R}\Rxx(t,u) f(u) \du     %& \text{(\prope{auto-correlation operator})}
 \end{array}}$
   }
@@ -328,13 +328,14 @@ Let $\rvy(n)$ be a \fncte{random sequence},
 and $\Rxy$    the \fncte{cross-correlation} of $\rvx$ and $\rvy$.
 \propbox{
   \brb{\begin{array}{M}
-    $\rvx$ and $\rvy$ are\\
-    \prope{wide sense stationary}
+    $\rvx$ and $\rvy$ are
+    \\\prope{wide sense stationary}
+    \\(\prope{WSS}) \xref{def:wss}
   \end{array}}
   \implies
-  \brb{\begin{array}{rcl}
-    \Rxx(n,m) &=& \Rxx(m)\\
-    \Rxy(n,m) &=& \Rxy(m)\\
+  \brb{\begin{array}{rcll}
+    \Rxx(n,m) &=& \Rxx(m) & \forall n\in\Z\\
+    \Rxy(n,m) &=& \Rxy(m) & \forall n\in\Z\\
     \text{\xref{def:Rxynm}} && \text{\xref{def:Rxym}}
   \end{array}}
 }
@@ -371,14 +372,14 @@ Let $\rvx(n)$ be a \fncte{random sequence} with \fncte{auto-correlation} $\Rxx(n
 and $\Rxy(n,m)$  the \fncte{cross-correlation} of $\rvx$ and $\rvy$.
 Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \corbox{
-  \brb{\begin{array}{FMD}
-      (A).&$\rvx$ and $\rvy$ are \prope{WSS} & and\\
-    \\(B).&$\opS$ is \prope{LTI}
+  \brb{\begin{array}{FMMD}
+      (A).&$\rvx$ and $\rvy$ are \prope{WSS} & \xref{def:wss} & and
+    \\(B).&$\opS$ is \prope{LTI}             &                &
   \end{array}}
   \implies
-  \brb{\begin{array}{FrclD}
-    (1).&\Rxx(m) &=& \Rxx     (-m) & (\prope{symmetric})\\
-    (2).&\Rxy(m) &=& \Ryx^\ast(-m) & (\prope{conjugate symmetric})
+  \brb{\begin{array}{FrclDD}
+      (1).&\Rxx(m) &=& \Rxx^\ast(-m) & (\prope{conjugate symmetric}) & and
+    \\(2).&\Rxy(m) &=& \Ryx^\ast(-m) & (\prope{conjugate symmetric})
   \end{array}}
 }
 \end{corollary}
@@ -387,18 +388,24 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
   \Rxy(m)
      &= \Rxy(n,m)
      && \text{by \prefp{prop:Rxynmm}}
+     && \text{and (A)}
    \\&= \Ryx^\ast(n+m,-m)
      && \text{by \prefp{thm:Rxynm}}
+     && \text{and (B)}
    \\&= \Ryx^\ast(-m)
      && \text{by \prefp{prop:Rxynmm}}
+     && \text{and (A)}
    \\
   \Rxx(m)
      &= \Rxx(n,m)
      && \text{by \prefp{prop:Rxynmm}}
-   \\&= \Rxx(n+m,-m)
+     && \text{and (A)}
+   \\&= \Rxx^\ast(n+m,-m)
      && \text{by \prefp{thm:Rxynm}}
-   \\&= \Rxx(-m)
+     && \text{and (B)}
+   \\&= \Rxx^\ast(-m)
      && \text{by \prefp{prop:Rxynmm}}
+     && \text{and (A)}
 \end{align*}
 \end{proof}
 
@@ -414,7 +421,7 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
   \put(-100, -50 ){\makebox (100, 40)[t]{$\Rxx(m)$}  }
   \put(-100, -50 ){\makebox (100, 40)[b]{$\Sxx(z)$}  }
   \put(-100,   0 ){\vector  (  1,  0){100}             }
-  \put(   0, -50 ){\framebox(100,100){$\conv\fh(n)$}  }
+  \put(   0, -50 ){\framebox(100,100){$\convd\fh(n)$}  }
   \put( 100,   0 ){\vector  (  1,  0){100}             }
   \put( 100,  10 ){\makebox (100, 40)[b]{$\rvy(n)$}  }
   \put( 100, -50 ){\makebox (100, 40)[t]{$\Ryy(m)$}  }
@@ -429,88 +436,60 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \end{fsK}
 \end{figure}
 
-The next theorem describes the statistical properties of an LTI system
-with impulse response $\fh(t)$ and with an input which is a
-WSS \fncte{random sequence} \xref{fig:d-linear-sys-WSS}.
 %---------------------------------------
 \begin{corollary}
 \footnote{
   \citerp{papoulis}{323}
   }
 %---------------------------------------
-%
-%       (1).&\pmeany(n)&=& \sum_{k\in\Z} \fh(k)      \pmeanx(m-k)  &= \fh(n)\conv \pmeanx(n) & and
-%     \\(2).&\Rxy(n,m) &=& \sum_{k\in\Z} \fh^\ast(k) \Rxx(n-k,m+k) &                         & and 
-%     \\(3).&\Ryy(n,m) &=& \sum_{k\in\Z} \fh^\ast(k) \Ryx(n-k,m+k)
-%
 Let $\rvx(n)$ be a \fncte{random sequence} with \fncte{auto-correlation} $\Rxx(n,m)$,
     $\rvy(n)$    a \fncte{random sequence} with \fncte{auto-correlation} $\Ryy(n,m)$,
 and $\Rxy(n,m)$  the \fncte{cross-correlation} of $\rvx$ and $\rvy$.
 Let $\opS$ be a \structe{system} with input $\rvx(n)$, output $\rvy(n)$, 
-and \fncte{impulse response} $\fh(n)$.
-\corboxt{
-  $\brb{\begin{array}{FMMD}
-    (A). & $\opS$ is \prope{linear time invariant}             & (\prope{LTI}) & and\\
-    (B). & $\rvx$ and $\rvy$ are \prope{wide sense stationary} & (\prope{WSS}) &
+and \fncte{impulse response} $\fh(n)$ \xref{fig:d-linear-sys-WSS}.
+\corbox{
+  \brb{\begin{array}{FMMD}
+      (A). & $\opS$    is \prope{LTI} & and
+    \\(B). & $\rvx(n)$ is \prope{WSS} & and
+    \\(C). & $\rvy(n)$ is \prope{WSS} &
   \end{array}}
-  \quad\implies$
-    \\\qquad$
+  \implies
   \brb{\begin{array}{Frc>{\ds}lc>{\ds}lD}
-       (1).&\Rxy(m) &=& \Rxx(m)\conv \fh^\ast(m)            &\eqd& \sum_{k\in\Z} \fh^\ast(k) \Rxx(m-k)  & and
-     \\(2).&\Ryy(m) &=& \Rxy(m)\conv \fh(m)                 &\eqd& \sum_{k\in\Z} \fh(k) \Rxy(m-k)        & and
-     \\(3).&\Ryy(m) &=& \Rxx(m)\conv \fh(m)\conv\fh^\ast(m) &\eqd& \mc{2}{l}{\ds\sum_{p\in\Z}\sum_{k\in\Z}\fh(k)h^\ast(p) \Rxx(m-p-k)}
+       (1).&\Rxy(m) &=& \Rxx(m)\convd \fh^\ast(-m)           &\eqd& \sum_{k\in\Z} \fh^\ast(k) \Rxx(m+k)  & and
+     \\(2).&\Ryy(m) &=& \Ryx(m)\convd \fh^\ast(-m)           &\eqd& \sum_{k\in\Z} \fh^\ast(k) \Rxy(m+k)  & and
+     \\(3).&\Ryy(m) &=& \Rxx^\ast(m)\convd \fh(-m)\convd\fh(-m) %&\eqd& \mc{2}{l}{\ds\sum_{p\in\Z}\sum_{k\in\Z}\fh(k)h^\ast(p) \Rxx(m-p-k)}
   \end{array}}
-  $
   }
 \end{corollary}
 \begin{proof}
 \begin{align*}
   \Rxy(m)
      &\eqd \Rxy(0,m)
-     && \text{by definition of $\Rxy(m)$}
-     && \text{\xref{def:Rxym}}
-   \\&= \Rxx(0,m)\conv \fh^\ast(m) %\eqd \sum_{k\in\Z} \fh^\ast(k) \Rxx(0,m-k)
-     && \text{by \prope{non-WSS} case}
-     && \text{\xref{thm:Rxyh}}
-   \\&\eqd \Rxx(m)\conv \fh^\ast(m)
-     && \text{by definition of $\Rxx(m)$}
-     && \text{\xref{def:Rxxm}}
-   \\&\eqd \sum_{k\in\Z} \fh^\ast(k) \Rxx(m-k)
-     && \text{by definition of \ope{convolution}}
-     && \text{\xref{def:dsp_conv}}
-\\
-\\
-  \Ryy(m)
-     &\eqd Ryy(0,m)
-     && \text{by definition of $\Ryy(m)$}
-     && \text{\xref{def:Rxxm}}
-   \\&= \Rxy(0,m)\conv \fh(m)
-     && \text{by \prope{non-WSS} case}
-     && \text{\xref{thm:Rxyh}}
-   \\&\eqd \Rxy(m)\conv \fh(m)
-     && \text{by definition of $\Rxy(m)$}
-     && \text{\xref{def:Rxxm}}
-   \\&\eqd \sum_{k\in\Z} \fh(k) \Rxy(m-k)
-\\
-\\
-  \Ryy(m)
-    &= \Rxy(m)\conv \fh(m)
-    && \text{by previous result}
-  \\&= \Rxx(m)\conv \fh^\ast(m) \conv \fh(m)
-    && \text{by previous result}
-  \\&= \Rxx(m)\conv \fh(m) \conv \fh^\ast(m)
+     && \text{by \prefp{prop:Rxynmm}}
+   \\&= \sum_{k\in\Z} \fh^\ast(k) \Rxx(n-k,m+k)
+     && \text{by \prefp{thm:Rxyh}}
+   \\&= \sum_{k\in\Z} \fh^\ast(k) \Rxx(m+k)
+     && \text{by \prefp{prop:Rxynmm}}
+   \\&= \fh^\ast(-m) \convd\Rxx(m)
+     && \text{by \prefp{prop:conv_knk}}
 \\
 \\
   \Ryy(m)
      &\eqd \Ryy(0,m)
-     && \text{by definition of $\Ryy(m)$}
-     && \text{\xref{def:Rxxm}}
-   \\&= \sum_{p\in\Z} \sum_{k\in\Z} \fh(k)h^\ast(p) \Rxx(0-k,m-p)
-     && \text{by \prope{non-WSS} case}
-     && \text{\xref{thm:Rxyh}}
-   \\&= \sum_{p\in\Z} \sum_{k\in\Z} \fh(k)h^\ast(p) \Rxx(m-p-k)
-     && \text{by definition of $\Rxx(m)$}
-     && \text{\xref{def:Rxxm}}
+     && \text{by \prefp{prop:Rxynmm}}
+   \\&= \sum_{k\in\Z} \fh^\ast(k) \Ryx(n-k,m+k)
+     && \text{by \prefp{thm:Rxyh}}
+   \\&= \sum_{k\in\Z} \fh^\ast(k) \Ryx(m+k)
+     && \text{by \prefp{prop:Rxynmm}}
+   \\&= \fh^\ast(-m) \convd\Ryx(m)
+     && \text{by \prefp{prop:conv_knk}}
+\\
+\\
+  \Ryy(m)
+     &= \fh^\ast(-m) \convd\Ryx(m)
+   \\&= \fh^\ast(-m) \convd\Rxy^\ast(m)
+   \\&= \fh^\ast(-m) \convd\brs{\fh^\ast(-m) \convd\Rxx(m)}^\ast
+   \\&= \fh^\ast(-m) \convd\fh(-m) \convd\Rxx^\ast(m)
 \end{align*}
 \end{proof}
 
@@ -558,7 +537,7 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
      &\eqd \opZ \Rxy(m)
     && \text{by definition of $\Sxy(z)$}
     && \text{\xref{def:csd}}
-   \\&= \opZ \brs{\Rxx(m) \conv \fh^\ast(m)}
+   \\&= \opZ \brs{\Rxx(m) \convd \fh^\ast(m)}
     && \text{by \prefp{thm:Rxyh}}
    \\&= \brs{\opZ\Rxx(m)}\,\opZ\brs{\fh^\ast(m)}
     && \text{by \thme{convolution theorem}}
@@ -570,7 +549,7 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
      &\eqd \opZ \Ryy(m)
     && \text{by definition of $\Syy(z)$}
     && \text{\xref{def:csd}}
-   \\&= \opZ \brs{\Rxy(m) \conv \fh(m)}
+   \\&= \opZ \brs{\Rxy(m) \convd \fh(m)}
     && \text{by \prefp{thm:Rxyh}}
    \\&= \brs{\opZ\Rxy(m)}\,\opZ\brs{\fh(m)}
     && \text{by \thme{convolution theorem}}
@@ -792,7 +771,7 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
     \\&=    \opDTFT        \sum_{k\in\Z} \fh^\ast(k) \brp{\pE\brs{\rvx(-m-k)\rvx^\ast(0)}}^\ast
     \\&\eqd \opDTFT        \sum_{k\in\Z} \fh^\ast(k) \Rxx^\ast(-m-k)
       && \text{by Papoulis' definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh^\ast(-m) \conv \Rxx^\ast(-m)}
+    \\&\eqd \opDTFT\brs{\fh^\ast(-m) \convd \Rxx^\ast(-m)}
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:conv}}
     \\&=    \brs{\opDTFT\fh^\ast(-m)} \brs{\opDTFT\Rxx^\ast(-m)}
@@ -812,7 +791,7 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
       && \text{\xref{def:Swxy}}
     \\&\eqd \opDTFT\pE\brs{\rvy(m)\rvx^\ast(0)}
       && \text{by Kay's definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\brp{\fh(m)\conv\rvx(m)}\rvx^\ast(0)}
+    \\&=    \opDTFT\pE\brs{\brp{\fh(m)\convd\rvx(m)}\rvx^\ast(0)}
       && \text{by \prope{LTI} property}
       && \text{\xref{thm:conv}}
     \\&=    \opDTFT\pE\brs{\brp{\sum_{k\in\Z} \fh(k)\rvx(m-k)}\rvx^\ast(0)}
@@ -820,7 +799,7 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
       && \text{by \prope{linearity} of $\sum$}
     \\&\eqd \opDTFT\brp{\sum_{k\in\Z} \fh(k)\Rxx(m-k)}
       && \text{by Kay's definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brp{\fh(m)\conv\Rxx(m)}
+    \\&\eqd \opDTFT\brp{\fh(m)\convd\Rxx(m)}
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:conv}}
     \\&=    \brs{\opDTFT\fh(m)}\brs{\opDTFT\Rxx(m)}
@@ -845,7 +824,7 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
     \\&=    \opDTFT        \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx(0)\rvx^\ast(m-k)}
     \\&\eqd \opDTFT        \sum_{k\in\Z} \fh^\ast(k) \Rxx^\ast(m-k)
       && \text{by \pref{item:Rxy_ystarm} definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh(m) \conv \Rxx^\ast(m)}
+    \\&\eqd \opDTFT\brs{\fh(m) \convd \Rxx^\ast(m)}
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:conv}}
     \\&=    \brs{\opDTFT\fh^\ast(m)} \brs{\opDTFT\Rxx^\ast(m)}
@@ -875,7 +854,7 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
       && \text{by \pref{item:Rxy_xstarm} definition of $\Rxy(m)$}
     \\&=    \opDTFT\sum_{k'\in\Z} \fh(-k')\Rxx(m-k')
       && \text{where $k'\eqd k$}
-    \\&\eqd \opDTFT\brs{\fh(-m) \conv \Rxx(m)}
+    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx(m)}
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:conv}}
     \\&\eqd \brs{\opDTFT\fh(-m)} \brs{\opDTFT\Rxx(m)}
@@ -899,7 +878,7 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
       && \text{by \prope{linearity} of $\sum$}
     \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh(k) \Rxx(m-k)
       && \text{by Bendat's definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh(m) \conv \Rxx(m)}
+    \\&\eqd \opDTFT\brs{\fh(m) \convd \Rxx(m)}
     \\&\eqd \Fh(\omega) \Swxx(\omega)
   \end{align*}
 
@@ -922,10 +901,10 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
       && \text{by \prope{commutative} property}
     \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh(k) \Rxx(-m-k)
       && \text{by \pref{item:Rxy_bendatalt} definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh(-m) \conv \Rxx(-m)}
+    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx(-m)}
       && \text{by definition of \ope{convolution} operation}
       && \text{\xref{def:conv}}
-    \\&\eqd \opDTFT\brs{\fh(-m) \conv \Rxx(m)}
+    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx(m)}
       && \text{by \prefp{cor:Rxxm}}
     \\&\eqd \Fh(-\omega) \Swxx(\omega)
   \end{align*}
@@ -945,7 +924,7 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
       && \text{by \prope{linearity} of $\sum$}
     \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \Rxx(m-k)
       && \text{by Bendat-star definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh^\ast(m) \conv \Rxx(m)}
+    \\&\eqd \opDTFT\brs{\fh^\ast(m) \convd \Rxx(m)}
     \\&\eqd \Fh^\ast(-\omega) \Swxx(\omega)
   \end{align*}
 
@@ -968,10 +947,10 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
       && \text{by \prope{commutative} property}
     \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \Rxx^\ast(-m-k)
       && \text{by \pref{item:Rxy_bendatalt} definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh(-m) \conv \Rxx^\ast(-m)}
+    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx^\ast(-m)}
       && \text{by definition of \ope{convolution} operation}
       && \text{\xref{def:conv}}
-    \\&\eqd \opDTFT\brs{\fh(-m) \conv \Rxx(m)}
+    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx(m)}
       && \text{by \prefp{cor:Rxxm}}
     \\&\eqd \Fh(-\omega) \Swxx(\omega)
   \end{align*}
@@ -1073,7 +1052,7 @@ is also causal and stable.
   \put(-100, -50 ){\makebox (100, 40)[b]{$\Sxx(z)$}                  }
   \put(-100,   0 ){\vector  (  1,  0){100}                           }
 
-  \put(   0, -50 ){\framebox(100,100)   {$\conv\gamma(n)$}           }
+  \put(   0, -50 ){\framebox(100,100)   {$\convd\gamma(n)$}           }
   \put(   0, -40 ){\makebox (100, 80)[t]{whitening}                  }
   \put(   0, -40 ){\makebox (100, 80)[b]{$\Gamma(z)$}                }
   \put( 100,   0 ){\vector  (  1,  0)   {200}                        }
@@ -1082,12 +1061,12 @@ is also causal and stable.
   \put( 100, -50 ){\makebox (200, 40)[t]{$\Rww(m)=\delta(m)$}  }
   \put( 100, -50 ){\makebox (200, 40)[b]{$\Sww(z)=1$}                }
 
-  \put( 300, -50 ){\framebox(100,100)   {$\conv l(n)$}               }
+  \put( 300, -50 ){\framebox(100,100)   {$\convd l(n)$}               }
   \put( 300, -40 ){\makebox (100, 80)[t]{innovations}                }
   \put( 300, -40 ){\makebox (100, 80)[b]{$L(z)$}                     }
   \put( 400,   0 ){\vector  (  1,  0)   {100}                        }
   \put( 400,  10 ){\makebox (100, 40)[b]{$\rvx(n)$}                  }
-  \put( 400, -50 ){\makebox (200, 40)[t]{$\Rxx(m)=l(m)\conv l^\ast(-m)$}  }
+  \put( 400, -50 ){\makebox (200, 40)[t]{$\Rxx(m)=l(m)\convd l^\ast(-m)$}  }
   \put( 400, -50 ){\makebox (200, 40)[b]{$\Sxx(z)=L(z) L^\ast\brp{\frac{1}{z^\ast}}$}  }
   \end{picture}
 \caption{
